--- a/docs/main.css
+++ b/docs/main.css
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 50px;
+}
+
 header {
   text-align: center;
   margin-bottom: 40px;
@@ -14,4 +18,8 @@ h1 {
 
 h2 {
   font-size: 1.6em;
+}
+
+h3 {
+  font-size: 1.3em;
 }
